# timbl

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  Makefile.am  NEWS  README  README.md  TODO  _config.yml  acinclude.m4  bootstrap  bootstrap.sh  build-deps.sh  codemeta.json  configure.ac  index.html  timbl.pc.in  timblserver.pc.in
.github/workflows/: timbl.yml
debian/: NEWS.Debian  README.devel  TODO  changelog  control  copyright  rules
demos/: .cvsignore  .gitignore  Makefile.am  api_test1.cxx  api_test2.cxx  api_test3.cxx  api_test4.cxx  api_test5.cxx  api_test6.cxx  classify.cxx  cross_val.test  dimin.script  dimin.test  dimin.train  small_1.train  small_2.train  small_3.train  small_4.train  small_5.train  sockettestClient.cxx  sockettestServer.cxx  tse.cxx
docs/: Makefile.am  Timbl.1  Timbl.man  Timbl_7.0_Manual.tex  timbl.1
docs/texfiles/: Timbl_6.3_API.tex  Timbl_6.3_Manual.tex  Timbl_6.4_Manual.tex  Timbl_7.0_Manual.tex  distanceweight-ided.eps  fspace.eps  fullname.bst  fullname.sty  ilk.bib  mble-method.eps  pos-neg.eps  roc-auc.eps
include/: Makefile.am
include/timbl/: BestArray.h  Choppers.h  CommandLine.h  Common.h  FdStream.h  Features.h  GetOptClass.h  IBtree.h  IndexClass.h  Instance.h  LogBuffer.h  LogStream.h  MBLClass.h  Makefile.am  Matrices.h  Metrics.h  MsgClass.h  NewIBtree.h  Options.h  ServerBase.h  ServerProcs.h  SocketBasics.h  Statistics.h  StringOps.h  Targets.h  Testers.h  TimblAPI.h  TimblExperiment.h  TimblServerAPI.h  Tree.h  Trie.h  Types.h  XMLtools.h  config.h  neighborSet.h
init/: .cvsignore  Makefile.am  timbl.in
m4/: .gitignore  Makefile.am  acx_pthread.m4
src/: .cvsignore  .gitignore  BestArray.cxx  CVExperiment.cxx  Choppers.cxx  CommandLine.cxx  Common.cxx  FdStream.cxx  Features.cxx  GetOptClass.cxx  IBprocs.cxx  IBtree.cxx  IGExperiment.cxx  Instance.cxx  LOOExperiment.cxx  LogBuffer.cxx  LogStream.cxx  MBLClass.cxx  Makefile.am  Metrics.cxx  MsgClass.cxx  NewIBtree.cxx  ServerBase.cxx  ServerProcs.cxx  SocketBasics.cxx  Statistics.cxx  StringOps.cxx  TRIBLExperiments.cxx  Targets.cxx  Testers.cxx  Timbl.cxx  TimblAPI.cxx  TimblClient.cxx  TimblExperiment.cxx  TimblServer.cxx  TimblServerAPI.cxx  Tree.cxx  Types.cxx  XMLtools.cxx  neighborSet.cxx  (+1 more)
