pkginclude_HEADERS = CommandLine.h Common.h GetOptClass.h IBtree.h Matrices.h \
	Instance.h LogBuffer.h LogStream.h MBLClass.h MsgClass.h BestArray.h \
	 ServerProcs.h SocketBasics.h StringOps.h TimblAPI.h Options.h \
	TimblExperiment.h Tree.h Trie.h Types.h neighborSet.h Statistics.h \
	Choppers.h Testers.h Metrics.h FdStream.h XMLtools.h


