pkginclude_HEADERS = CommandLine.h Common.h GetOptClass.h IBtree.h Matrices.h \
	Instance.h MBLClass.h MsgClass.h BestArray.h \
	StringOps.h TimblAPI.h Options.h \
	LogBuffer.h LogStream.h \
	TimblExperiment.h Tree.h Trie.h Types.h neighborSet.h Statistics.h \
	Choppers.h Testers.h Metrics.h XMLtools.h


